Fixed bug of icons overlapping nav bar

--- a/client/src/styles/HomePage.css
+++ b/client/src/styles/HomePage.css
@@ -1,5 +1,6 @@
 .main-page-container {
   margin: 15px 25px;
+  z-index: 100;
 }
 
 .header-container {
