--- a/client/src/styles/NavigationLayout.css
+++ b/client/src/styles/NavigationLayout.css
@@ -5,6 +5,10 @@
   --background-white: #FDFDFD;
 }
 
+#navigation {
+  z-index: 101;
+}
+
 #nav-bar-mobile {
   display: flex;
   justify-items: center;
